# sqlcookbook-pandas

./: README.md  ch10.py  ch11.py  ch12.py  ch13.py  ch14.py  ch2.py  ch3.py  ch4.py  ch7.py  pyproject.toml
data/: department.csv  department.py  department_accident.csv  department_accident.py  employee.csv  employee.py  employee_bonus.csv  employee_bonus.py  new_salary.csv  new_salary.py  project.csv  project.py  sales.csv  sales.py  transaction.csv  transaction.py  transaction_full.csv  transaction_full.py
