[project]
name = "pandas-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dateparser>=1.2.2",
    "marimo>=0.20.4",
    "numpy>=2.3.5",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "parsedatetime>=2.6",
    "pyarrow>=23.0.1",
    "python-slugify>=8.0.4",
    "pyzmq>=27.1.0",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
]
